# Network-Monitor

./: .gitignore  CMakeLists.txt  README.md  design log.md
data/: descriptions.txt  watchlist.example.txt
design log/: design log.md
src/: app.cpp  app.hpp  capture.cpp  capture.hpp  config.cpp  config.hpp  descriptions.cpp  descriptions.hpp  main.cpp  packet.cpp  packet.hpp  packet_store.cpp  packet_store.hpp  panel.cpp  panel.hpp  process_mapper.cpp  process_mapper.hpp  sidebar.cpp  sidebar.hpp  ui.cpp  ui.hpp  watchlist.cpp  watchlist.hpp
src/panels/: detail.cpp  detail.hpp  graph.cpp  graph.hpp  packet_list.cpp  packet_list.hpp  stats.cpp  stats.hpp
testing/: tests.cpp
